# nooku

./: .gitignore  Cargo.toml  README.md
songs/: README.txt
src/: main.rs  weather.rs
