[package]
name = "nooku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", features = ["client", "standard_framework",
"voice"]}
songbird = "0.3.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.15"


